# product-application-fullstack

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini
backend/: Dockerfile  database.py  main.py
backend/database/: __init__.py  database.py
backend/models/: __init__.py  models.py  product.py
backend/routers/: __init__.py  products.py
backend/schemas/: __init__.py  product.py  schemas.py
backend/services/: __init__.py  product_services.py
backend/tests/: conftest.py  test_product_services.py  test_products_api.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: DeleteConfirmModal.tsx  Modal.tsx  ProductForm.tsx
frontend/src/components/ui/: card.tsx
frontend/src/services/: apiService.ts
