[tool.poetry]
name = "bootcamp-python"
version = "0.1.0"
description = ""
authors = ["jonhnatta <jonhnatta.santos@gmail.comclear>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.43"
python-dotenv = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
