[tool.poetry]
name = "bootcamp-python"
version = "0.1.0"
description = ""
authors = ["jonhnatta <jonhnatta.santos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.43"
python-dotenv = "^1.1.1"
sqlalchemy-utils = "^0.42.0"
pydantic = "^2.11.7"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
psycopg2-binary = "^2.9.10"
email-validator = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
